# tauri-win-stackoverflow

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: tauri-ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: ext.json  main.json
src-tauri/src/: main.rs
