[package]
name = "tauri-win-stackoverflow"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
# tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri = { version = "2.0.0-beta", features = [] }
# tauri-plugin-store = "2.0.0-beta.6"
tauri-plugin-dialog = "2.0.0-beta.7"
# tauri-plugin-upload = "2.0.0-beta.5"
# tauri-plugin-notification = "2.0.0-beta.5"
tauri-plugin-log = "2.0.0-beta.4"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-os = "2.0.0-beta.4"
tauri-plugin-http = "2.0.0-beta.7"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.4"
tauri-plugin-updater = "2.0.0-beta.5"
